creusot/tests/should_fail/ghost/create_in_program.stderr
error: cannot create a ghost variable in program context
 --> create_in_program.rs:5:14
  |
5 |     let _g = GhostBox::new(1);
  |              ^^^^^^^^^^^^^^^^ help: try wrapping this expression in `gh!` instead: `gh!{ 1 }`

error: aborting due to 1 previous error

